--- a/Ass2 Backpropagation.ipynb
+++ b/Ass2 Backpropagation.ipynb
@@ -23,8 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs = np.array([0.05, 0.10])\n",
-    "targets = np.array([0.01, 0.99])\n",
+    "input_values = np.array([0.05, 0.10])\n",
+    "target_values = np.array([0.01, 0.99])\n",
     "\n",
     "weights_input_hidden = np.array([[0.15, 0.20], [0.25, 0.30]])\n",
     "weights_hidden_output = np.array([[0.40, 0.45], [0.50, 0.55]])\n",
@@ -40,10 +40,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hidden_input = np.dot(inputs, weights_input_hidden) + bias_hidden\n",
-    "hidden_output = sigmoid(hidden_input)\n",
+    "hidden_layer_input = np.dot(input_values, weights_input_hidden) + bias_hidden\n",
+    "hidden_layer_output = sigmoid(hidden_input)\n",
     "\n",
-    "final_input = np.dot(hidden_output, weights_hidden_output) + bias_output\n",
+    "final_input = np.dot(hidden_layer_output, weights_hidden_output) + bias_output\n",
     "final_output = sigmoid(final_input)\n"
    ]
   },
