--- a/Ass2 Backpropagation.ipynb
+++ b/Ass2 Backpropagation.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "hidden_layer_input = np.dot(input_values, weights_input_hidden) + bias_hidden\n",
-    "hidden_layer_output = sigmoid(hidden_input)\n",
+    "hidden_layer_output = sigmoid(hidden_layer_input)\n",
     "\n",
     "final_input = np.dot(hidden_layer_output, weights_hidden_output) + bias_output\n",
     "final_output = sigmoid(final_input)\n"
