--- a/Ass2 Backpropagation.ipynb
+++ b/Ass2 Backpropagation.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "error = 0.5 * ((targets - final_output) ** 2)"
+    "error = 0.5 * ((target_values - final_output) ** 2)"
    ]
   },
   {
@@ -64,11 +64,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_error = final_output - targets\n",
+    "output_error = final_output - target_values\n",
     "output_delta = output_error * sigmoid_derivative(final_output)\n",
     "\n",
     "hidden_error = np.dot(output_delta, weights_hidden_output.T)\n",
-    "hidden_delta = hidden_error * sigmoid_derivative(hidden_output)\n"
+    "hidden_delta = hidden_error * sigmoid_derivative(hidden_layer_output)\n"
    ]
   },
   {
@@ -79,8 +79,8 @@
    "outputs": [],
    "source": [
     "learning_rate = 0.5\n",
-    "weights_hidden_output -= learning_rate * np.outer(hidden_output, output_delta)\n",
-    "weights_input_hidden -= learning_rate * np.outer(inputs, hidden_delta)\n",
+    "weights_hidden_output -= learning_rate * np.outer(hidden_layer_output, output_delta)\n",
+    "weights_input_hidden -= learning_rate * np.outer(input_values, hidden_delta)\n",
     "\n",
     "bias_output -= learning_rate * output_delta\n",
     "bias_hidden -= learning_rate * hidden_delta\n"
